--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -4,7 +4,7 @@
     android:id="@+id/layoutSwipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".presentation.ArticlesActivity"
     android:background="@android:color/white">
 
     <androidx.recyclerview.widget.RecyclerView
