--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -4,8 +4,7 @@
     android:id="@+id/layoutSwipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ArticlesActivity"
-    android:background="@android:color/white">
+    tools:context=".presentation.ArticlesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
