--- a/app/src/main/res/layout/cell_article.xml
+++ b/app/src/main/res/layout/cell_article.xml
@@ -8,7 +8,8 @@
     android:focusable="true"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:background="#AAA">
+    tools:background="#AAA"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/textTitle"
